# huhuha

./: .gitignore  README.md  README_2.md  pyproject.toml  run_experiment_1.sh  run_experiment_2.sh
.dvc/: config
data/: .gitignore  avalanches-dataset-12.csv  avalanches-dataset-13.csv  avalanches-dataset-14.csv  avalanches-dataset-common.csv  avalanches-dataset.csv  avalanches-dataset.geojson  center_tiles.dvc  data-avalanche.csv
huhuha/: centered_tiles.py  data_module.py  ops_tiles.py  settings.py  utils.py
notebooks/: copernicus.ipynb  data_analysis.ipynb  dataset_creation.ipynb  download_center_tiles.ipynb  fix_missing.ipynb  massif_analysis_v1 copy.ipynb  massif_analysis_v2.ipynb  massif_counts.csv  prepare_weather_data.ipynb  results_visualisation.ipynb  scraping-data-avalanche.ipynb  topography.ipynb  weather_eda.ipynb  wizualizacje_zb_danych.ipynb
raw_data/: .gitignore  center_tiles.zip.dvc  opentopomap_tiles.zip.dvc
results/: CNN_AUG_MLP___src_arcgis___zoom_f12_num_runs_5.csv  CNN_AUG_MLP___src_arcgis___zoom_f13_num_runs_5.csv  CNN_AUG_MLP___src_arcgis___zoom_f14_num_runs_5.csv  CNN_AUG_MLP___src_arcgis___zoom_f15_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f12_13_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f12_14_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f12_15_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f12_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f13_14_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f13_15_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f13_15_preds.json  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f13_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f14_15_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f14_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f15_12_num_runs_5.csv  CNN_AUG_MLP___src_arcgis_opentopomap___zoom_f15_num_runs_5.csv  CNN_AUG_MLP___src_opentopomap___zoom_f12_num_runs_5.csv  CNN_AUG_MLP___src_opentopomap___zoom_f12_preds.json  CNN_AUG_MLP___src_opentopomap___zoom_f13_num_runs_5.csv  CNN_AUG_MLP___src_opentopomap___zoom_f14_num_runs_5.csv  (+44 more)
scripts/: unzip_tiles_data.py  (+1 more)
(+48 files in other folders)
