[tool.poetry]
name = "huhuha"
version = "0.1.0"
description = "Przewidywanie czy lawina, a może nie"
authors = ["Wojciech Korczyński <wojtek19962a32@gmail.com>", "Jan Słowik <jas.slowik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
notebook = "^6.4.7"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
