[tool.poetry]
name = "huhuha"
version = "0.1.0"
description = "Przewidywanie czy lawina, a może nie"
authors = ["Wojciech Korczyński <wojtek19962a32@gmail.com>", "Jan Słowik <jas.slowik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
notebook = "^6.4.7"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
requests = "^2.27.1"
Pillow = "^9.0.0"
Fiona = "^1.8.20"
geopandas = "^0.10.2"
contextily = "^1.2.0"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
haversine = "^2.5.1"
dvc = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
poethepoet = "^0.12.2"
black = "^21.12b0"

[tool.poe.tasks]
install-torch = """
python -m pip install torch==1.10.1+cu113 torchvision==0.11.2+cu113 torchmetrics==0.7.0 pytorch-lightning==1.5.9
-f https://download.pytorch.org/whl/torch_stable.html
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
